Fixed overlapping gradient on bottom of hero on mobile

--- a/src/styles/pages/Index.scss
+++ b/src/styles/pages/Index.scss
@@ -3,13 +3,14 @@
         overflow: hidden;
         background: $primary-color;
         width: 100%;
-        padding: $spacing-3 10px 0;
+        padding: $spacing-3 10px;
 
         @include breakpoint('medium') {
             padding-top: $spacing-4;
             padding-left: 0;
             padding-right: 0;
             min-height: 100vh;
+            padding-bottom: 0;
         }
         
         @include breakpoint('xlarge') {
